--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@babel/core": "^7.14.6",
@@ -15,6 +16,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "babel-plugin-emotion": "^11.0.0",
+    "command-line-args": "^4.0.7",
     "date-fns": "^2.22.1",
     "firebase": "^8.7.0",
     "firebase-admin": "^9.10.0",
